fix: Item's long name is overflowing in item price column on review page (GH-4517)

--- a/projects/storefrontstyles/scss/components/cart/_cart-item.scss
+++ b/projects/storefrontstyles/scss/components/cart/_cart-item.scss
@@ -16,7 +16,6 @@
     @include type('5');
     overflow-wrap: break-word;
     padding: 0;
-    min-width: 17rem;
 
     .cx-link {
       color: var(--cx-color-text);
